<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/signuplayout"
    >




    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:gravity="center"
        android:layout_weight="1.5"
        android:layout_alignParentTop="true"
               android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="68dp" />

    <EditText
        android:id="@+id/signup_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:gravity="center"
        android:layout_weight="1.5"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:gravity="center"
        android:layout_weight="1.5"
        android:layout_alignBaseline="@+id/signup_pass"
        android:layout_alignBottom="@+id/signup_pass"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <EditText
        android:id="@+id/signup_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:gravity="center"
        android:layout_weight="1.5"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/signup_user"
        android:layout_alignLeft="@+id/signup_user"
        android:layout_alignStart="@+id/signup_user" />

 <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:gravity="center"
        android:layout_weight="1.5"
     android:layout_alignLeft="@+id/textView5"
     android:layout_alignStart="@+id/textView5"
     android:layout_alignBottom="@+id/signup_confpass" />

    <EditText
        android:id="@+id/signup_confpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:gravity="center"
        android:layout_weight="1.5"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/signup_pass"
        android:layout_alignLeft="@+id/signup_pass"
        android:layout_alignStart="@+id/signup_pass" />










    <Button
        android:id="@+id/signup_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="signup_signin"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/signup_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:onClick="signup_signup"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_alignBaseline="@+id/signup_signin"
        android:layout_alignBottom="@+id/signup_signin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
